Show correct dod info when appropriate. Pull Actions up to same level as Streams. Drop z-index from main buttons.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -37,7 +37,6 @@ $main-color: $primary1Color;
 .menuwrapper {
   max-width: 1280px;
   margin: auto;
-  z-index: 5000;
   position: relative;
 }
 
@@ -86,6 +85,15 @@ $main-color: $primary1Color;
 
 .card.filters {
   width: 96%;
+}
+
+.card.streams {
+  width: 70%;
+}
+
+.card.actions {
+  width: 25%;
+  min-height:18em;
 }
 
 .card.listing {
